solutions/03_networking/net-007-gateway-class.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: nginx-gateway-class
spec:
  controllerName: nginx.org/gateway-controller
  parametersRef:
    group: ""
    kind: ConfigMap
    name: nginx-gw-config
    namespace: networking
  allowedFeatures:
  - FeatureName: CrossNamespace
